tests/errors/lex_int2.java
public class lex_int2 {
	public static int a = 2147483647;
	public static int b = -2147483647;
	public static int c = 2147483648;
}
